--- a/Pizza Calculator/Resources/layout/Main.axml
+++ b/Pizza Calculator/Resources/layout/Main.axml
@@ -15,6 +15,8 @@
 		android:layout_height="match_parent"
 		android:gravity="center"
 		android:visibility="visible"
+		android:layout_marginLeft="15dp"
+		android:layout_marginRight="15dp"
 		android:text="@string/no_data_available"/>
 		
 	<android.support.v7.widget.RecyclerView
